--- a/.travis.yml
+++ b/.travis.yml
@@ -9,8 +9,8 @@ jobs:
   include:
     - os: linux
       arch: amd64
-    - os: osx
-      arch: amd64
+    - os: linux
+      arch: arm64
 
 addons:
   apt:
